--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<canvas id="canvas1"></canvas>
+		<section id="container">
+			<canvas id="canvas1"></canvas>
+			<p>Game Speed: <span id="showGameSpeed"></span></p>
+			<input type="range" min="0" max="20" value="5" class="slider" id="slider">
+		</section>
+
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
